WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 208520
REGRESSION (
r257739
): two fast/events/autoscroll test have started to fail
https://bugs.webkit.org/show_bug.cgi?id=208520
Summary
REGRESSION (r257739): two fast/events/autoscroll test have started to fail
Jacob Uphoff
Reported
2020-03-03 09:43:54 PST
The following tests started to fail after commit
r257739
: fast/events/autoscroll-in-iframe.html fast/events/autoscroll-in-iframe-body.html History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=fast/events/autoscroll-in-iframe.html&test=fast/events/autoscroll-in-iframe-body.html&platform=ios
Attachments
Patch
(1.62 KB, patch)
2020-03-03 18:43 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-03 09:44:09 PST
<
rdar://problem/60000214
>
Alexey Proskuryakov
Comment 2
2020-03-03 17:45:31 PST
@@ -1,3 +1,4 @@ +FAILED: Clicking in the iframe scrolled the page (window.scrollTop is 0) PASSED: selecting in the iframe did not scroll the page.
Andres Gonzalez
Comment 3
2020-03-03 18:43:15 PST
Created
attachment 392361
[details]
Patch
chris fleizach
Comment 4
2020-03-03 19:50:28 PST
Comment on
attachment 392361
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392361&action=review
> Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:-49 > -#if PLATFORM(COCOA)
I think we should tie this to the isolated tree feature flag
chris fleizach
Comment 5
2020-03-04 02:59:19 PST
Comment on
attachment 392361
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=392361&action=review
>> Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:-49 >> -#if PLATFORM(COCOA) > > I think we should tie this to the isolated tree feature flag
Actually I see there are some larger issues using that in Tools that Iām addressing In another patch. So this should be ok for now
WebKit Commit Bot
Comment 6
2020-03-04 03:47:38 PST
Comment on
attachment 392361
[details]
Patch Clearing flags on attachment: 392361 Committed
r257838
: <
https://trac.webkit.org/changeset/257838
>
WebKit Commit Bot
Comment 7
2020-03-04 03:47:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug