REGRESSION (r257739): two fast/events/autoscroll test have started to fail https://bugs.webkit.org/show_bug.cgi?id=208520 <rdar://problem/60000214>

Reviewed by Chris Fleizach.

Calling InjectedBundle::singleton().page()->page() in the constructor
of the AccessibilityController is having this side effect on iOS.
So #if to MAC where it's actually being used.

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
(WTR::AccessibilityController::AccessibilityController):


Canonical link: https://commits.webkit.org/221478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257838 268f45cc-cd09-0410-ab3c-d52691b4dbfc